Closed Bug 736660 Opened 14 years ago Closed 14 years ago

compilation fails: 'source' is not a member of 'nsGkAtoms', if MOZ_MEDIA is not set

Categories

(Core :: Audio/Video, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: aceman, Assigned: aceman)

Details

Attachments

(1 file)

mozilla/content/base/src/nsContentUtils.cpp: In static member function 'static bool nsContentUtils::IsHTMLVoid(nsIAtom*)': mozilla/content/base/src/nsContentUtils.cpp:1252:20: error: 'source' is not a member of 'nsGkAtoms' mozilla/content/base/src/nsContentUtils.cpp: In static member function 'static void nsContentUtils::MaybeFireNodeRemoved(nsINode*, nsINode*, nsIDocument*)': mozilla/content/base/src/nsContentUtils.cpp:3661:142: warning: suggest parentheses around '&&' within '||' mozilla/content/base/src/nsContentUtils.cpp: In static member function 'static bool nsContentUtils::IsHTMLVoid(nsIAtom*)': mozilla/content/base/src/nsContentUtils.cpp:1255:1: error: control reaches end of non-void function gmake[7]: *** [nsContentUtils.o] Error 1
Attached patch fixSplinter Review
Attachment #606800 - Flags: review?(bzbarsky)
Attachment #606800 - Flags: review?(bzbarsky) → review+
Thanks!
Keywords: checkin-needed
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: