Bug 736660 - fix compilation: 'source' is not a member of 'nsGkAtoms', if MOZ_MEDIA is not set. r=bz